welcome.lessons.welcome.array.averagevalue.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
	var moyenne:Int=0
	for (i<-0 to nums.length -1) {
		moyenne = moyenne + nums(i)
	}
	moyenne = Math.abs(moyenne/nums.length)
}
